--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body {
     align-items: center;
 }
 .logo {
-    background-image: url("../hitech.png");
+    background-image: url("../assets/logo.png");
     background-repeat: no-repeat;
     background-size: contain;
-    width: 500px;
+    width: 300px;
     height: 300px;
     margin-bottom: 20px;
     align-self: center;
